Javadoc for file protocol implementation. Also bug fixes for bugs identified by analizes implemented in classes